fix: safari not respecting hidden overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   overflow-y: scroll;
   overflow-x: hidden;
 }
